--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interactive",
+  "name": "fy22-anti-violence",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.27.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "d3-array": "^3.0.1",
+    "d3-format": "^3.0.1",
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.1",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@mdi/js": "^5.9.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "html-loader": "^2.1.2",
+    "markdown-loader": "^6.0.0",
+    "postcss-prefix-selector": "^1.10.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
