--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-format": "^3.0.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.1",
+    "vue-slider-component": "^3.2.14",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
@@ -24,8 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "html-loader": "^2.1.2",
-    "markdown-loader": "^6.0.0",
+    "frontmatter-markdown-loader": "^3.6.3",
+    "html-loader": "^1",
     "postcss-prefix-selector": "^1.10.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
